--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="label_category_icon">카테고리</string>
     <string name="label_home_icon">홈</string>
     <string name="label_cart_icon">장바구니</string>
+    <string name="home_info">Ivy님 이런 상품\n어때요?</string>
 </resources>
