--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
 
     <string name="unit_discount_rate">%d%%</string>
     <string name="unit_discount_currency">%s원</string>
+    <string name="category_new">NEW</string>
+    <string name="label_category">카테고리</string>
 </resources>
