--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="unit_discount_currency">%s원</string>
     <string name="category_new">NEW</string>
     <string name="label_category">카테고리</string>
+    <string name="product_detail_image">상품 상세 이미지</string>
+    <string name="product_detail_basket_button">장바구니 담기</string>
 </resources>
